feat: correção das peças teste